# arf-api-repository

./: .env.production  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  dockerfile  env.example  init-db.sql  pyproject.toml  pytest.ini  railway.json  render.yaml  requirements-dev.txt  requirements.txt
.github/workflows/: docker.yml  minimal-tests.yml  quality.yml  test.yml  tests.yml
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial_schema.py
scripts/: add_test_markers.py  verify_test_structure.py
src/: database.py  main.py  monitoring.py
src/api/v1/: __init__.py  authority.py  execution_ladder.py  incidents.py  rollback.py  webhooks.py
src/auth/: database_models.py  dependencies.py  models.py  router.py
src/database/: __init__.py  neo4j_client.py  postgres_client.py  redis_client.py
src/integrations/: __init__.py  base.py  discord.py  email.py  opsgenie.py  pagerduty.py  slack_integration.py  teams.py
src/middleware/: logging.py
src/models/: execution_ladder.py  incident.py  rollback.py  webhook.py
src/services/: __init__.py  execution_authority_service.py  neo4j_service.py  rollback_service.py  webhook_service.py
tests/: conftest.py  test.yml  test_api_security.py  test_auth.py  test_basic.py  test_debug.py  test_execution_ladder.py  test_incidents.py  test_infrastructure.py  test_monitoring.py  test_rollback.py  validate_imports.py
